--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Rating state end -->
   <!-- Thank you state start -->
   <div class="modal-overlay">
-    <div class="submitted-modal">
+    <div class="modal-container">
       <p class="selected">You selected <!-- Add rating here --> out of 5</p>
       <h1>Thank you</h1>
       <p>
