added images and icons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <!-- Rating state start -->
   <div class="container">
     <div class="rating">
+      <!-- Logo -->
+    <img src="./images/icon-star.svg" class="logo" alt="star icon">
       <h2>How did we do?</h2>
       <p>Please let us know how we did with your support request. All feedback is appreciated 
         to help us improve our offering!
@@ -37,6 +39,7 @@
   <!-- Thank you state start -->
   <div class="modal-overlay">
     <div class="modal-container">
+      <img src="./images/illustration-thank-you.svg" class="thank-you" alt="">
       <p class="selected">You selected <!-- Add rating here --> out of 5</p>
       <h1>Thank you</h1>
       <p>
