--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
   <div class="container">
     <div class="rating">
       <!-- Logo -->
-    <img src="./images/icon-star.svg" class="logo" alt="star icon">
+      <div class="banner">
+        <img src="./images/icon-star.svg" class="logo" alt="star icon">
+      </div>
       <h2>How did we do?</h2>
       <p>Please let us know how we did with your support request. All feedback is appreciated 
         to help us improve our offering!
       </p>
       <div class="numbers">
-        <p>1</p>
-        <p>2</p>
-        <p>3</p>
-        <p>4</p>
-        <p>5</p>
+        <p class="number">1</p>
+        <p class="number">2</p>
+        <p class="number">3</p>
+        <p class="number">4</p>
+        <p class="number">5</p>
     </div>
     <button class="btn modal-btn">
       Submit 
@@ -41,7 +43,7 @@
     <div class="modal-container">
       <img src="./images/illustration-thank-you.svg" class="thank-you" alt="">
       <p class="selected">You selected <!-- Add rating here --> out of 5</p>
-      <h1>Thank you</h1>
+      <h1>Thank you!</h1>
       <p>
         We appreciate you taking the time to give a rating. If you ever need more support, 
         don't hesitate to get in touch!
@@ -49,11 +51,6 @@
     </div>
   </div>
   <!-- Thank you state end -->
-  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 
   <!-- javascript -->
   <script src="app.js"></script>
